--- a/TD7a.3/css/style.css
+++ b/TD7a.3/css/style.css
@@ -1,39 +1,83 @@
-
-fieldset{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 10px solid lightblue;
-    border-radius: 10px;
-    box-sizing: border-box;
-    text-align: center;
+*{
+    margin: 0px; 
+    padding: 0px;
 }
+
+
+body{
+    background-image: url("aix.png");
+    background-repeat: space;
+    background-color: rgba(245, 222, 179, 0.671);
+    font-family: Verdana, Tahoma, sans-serif;
+     
+}
+
+/*
+.pagehead {
+    margin: 0px; 
+    padding: 0px;
+    display: inline;
+}
+
+#home {
+ display: inline;
+}
+#logout {
+display: inline;
+}
+#profile {
+ display: inline
+}
+#newpost {
+display: inline;
+}
+
+/*#head {
+    width: 950px;
+    color: blue;
+    background-color: aqua;
+}*/
+
+
+
+header {
+    background-color: lightblue;
+    height: 100px ;
+    top: 0px;
+    width: 2000px;
+} 
+
+/*fieldset{
+    width: 90%;
+    border: 1px solid rgb(194, 133, 141);
+    border-radius: 1px;
+    text-align: center;
+}*/
+
 h1 {
     text-align: center;
-    color: lightskyblue;
+    color:rgb(230, 214, 2);
     font-family: 'Courier New', Courier, monospace;
-}
-h2 { 
-    text-align: center;
-    color: rgb(99, 72, 57);
-    font-style: italic;
-}
-legend{
-    text-align: center;
-    color: darkgrey;
+    background-color: aliceblue;
+    border-radius: 15px;
 }
 
-#lien{
+h2 { 
+    text-align: center;
+    color: rgb(78, 133, 236); 
+    font-style: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    text-decoration: underline overline; 
+    text-decoration-color: gold;
+}
+
+#lien {
     width: 100%;
-    padding: 12px 20px;
+    padding: 100px 30px;
     margin: 8px 0;
     display: inline-block;
-    border: 3px solid lightblue;
-    border-radius: 4px;
-    box-sizing: border-box;
     text-align: center;
-    color:black;
+    color: rgb(163, 0, 0);
     font-size: 150%
 } 
 
@@ -42,24 +86,36 @@ input[type=text] {
     padding: 7px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 1px solid #555;
+    border: 3px solid rgba(0, 77, 192, 0.329);
     outline: none;
     text-align: center;
 }
+
+input[type=text]:hover{
+    background-color: rgba(173, 216, 230, 0.692);
+    border: 3px solid gold;
+}
+
 input[type=password] {
     width: 20%;
     padding: 7px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 1px solid #555;
+    border: 3px solid rgba(0, 77, 192, 0.329);
     outline: none;
     text-align: center;
+    text-decoration: underline;
 }
-    input[type=password] {
-        background-color: white;
+
+input[type=password]:hover{
+        background-color: rgba(173, 216, 230, 0.616);
         background-position: 10px 10px; 
-        background-repeat: no-repeat;
         padding-left: 40px;
+        border:3px solid rgb(173, 216, 230);
+    }
+
+input[type=password]:hover {
+        border:3px solid gold;
     }
 
 input[type=submit] {
@@ -74,19 +130,43 @@ input[type=submit] {
     text-align: center;
 }
 
-input[type=password]:hover {
-    border:3px solid lightblue;
-}
-input[type=text]:hover{
-    border: 3px solid lightblue;
-}
-
-#selecteur{
+#selecteur {
     color:black;
-    background: lightblue;
-    border: rgb(2, 2, 77);
+    background: rgb(224, 221, 64);
+    border: rgb(0, 0, 0);
     cursor: crosshair;
     margin: 8px 0;
-    border-radius: 30px;
+    border-radius: 50px;
     padding: 7px 12px;
 }
+
+#formulaire:hover {
+
+    width: 80%;
+    padding: 20px 20px;
+    margin: 8px 0;
+    /*box-sizing: border-box;
+    border: 3px solid Turquoise;*/
+    text-align: center;
+}
+
+.formm:hover {
+    width: 80%;
+    padding: 30px é0px;
+    margin: 10px 0;
+    box-sizing: border-box;
+    border: 2px solid rgb(255, 230, 0);
+    text-align: center;
+
+}
+
+div {
+    margin-top: 30px;
+    margin-left: 50px;
+    padding-right: 5px;
+    padding-bottom: 2px;
+    text-align: center;
+    }
+
+
+
